--- a/eReservation/eReservation/eReservation.csproj
+++ b/eReservation/eReservation/eReservation.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Requests\" />
   </ItemGroup>
 
 </Project>
