--- a/eReservation/eReservation/appsettings.json
+++ b/eReservation/eReservation/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-6HC8M0G;Initial Catalog=eReservation;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=eReservation;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    //DESKTOP-6HC8M0G
   },
   "Logging": {
     "LogLevel": {
