added email service

--- a/eReservation/eReservation/appsettings.json
+++ b/eReservation/eReservation/appsettings.json
@@ -3,6 +3,12 @@
     "DefaultConnection": "Data Source=localhost;Initial Catalog=eReservation;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
     //DESKTOP-6HC8M0G
   },
+  "MojEmailServer": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "From": "nastava.fit.1@gmail.com",
+    "Lozinka": "eefanejilgiqfvvb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
