Admin-page, reservation,reviews

--- a/eReservation/eReservation/appsettings.json
+++ b/eReservation/eReservation/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=eReservation;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-    //DESKTOP-6HC8M0G
+    "DefaultConnection": "Data Source=localhost\\MSSQLSERVER03;Initial Catalog=eReservation;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "MojEmailServer": {
     "Host": "smtp.gmail.com",
