--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.0",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@ngneat/transloco": "^6.0.4",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "jspdf": "^3.0.1",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -36,6 +39,7 @@
     "@angular/compiler-cli": "^17.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.17",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
